# positioning-alignment-tool

./: Cargo.toml  README.md
src/: main.rs  renderer.rs
ui/: app-window.slint
