[package]
name = "positioning-alignment-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.14.1"
crazyflie-lib = "0.8.0"
crazyflie-link = "0.5.0"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dirs-next = "2.0"
rfd = "0.15"
glow = "0.16"

[build-dependencies]
slint-build = "1.14.1"
